--- a/Churn_Prediction.ipynb
+++ b/Churn_Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -223,7 +223,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -727,7 +727,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
        "1.0                  483                     483  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
        " 'churn']"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
        "4                       3    0.0  "
       ]
      },
-     "execution_count": 150,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,22 +1172,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'sort'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-155-95ab0d81fae3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdistanceMatrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'distance'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/.local/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5065\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5066\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5067\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5068\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5069\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'sort'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>account length</th>\n",
+       "      <th>international plan</th>\n",
+       "      <th>voice mail plan</th>\n",
+       "      <th>number vmail messages</th>\n",
+       "      <th>total day minutes</th>\n",
+       "      <th>total day calls</th>\n",
+       "      <th>total day charge</th>\n",
+       "      <th>total eve minutes</th>\n",
+       "      <th>total eve calls</th>\n",
+       "      <th>total eve charge</th>\n",
+       "      <th>total night minutes</th>\n",
+       "      <th>total night calls</th>\n",
+       "      <th>total night charge</th>\n",
+       "      <th>total intl minutes</th>\n",
+       "      <th>total intl calls</th>\n",
+       "      <th>total intl charge</th>\n",
+       "      <th>customer service calls</th>\n",
+       "      <th>churn</th>\n",
+       "      <th>distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1964</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>53716.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>53846.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2285</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>54367.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>825</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>54693.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1926</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>54771.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     account length  international plan  voice mail plan  \\\n",
+       "1964              6                   0                0   \n",
+       "262               4                   0                0   \n",
+       "2285              1                   0                0   \n",
+       "825               3                   0                0   \n",
+       "1926              1                   0                0   \n",
+       "\n",
+       "     number vmail messages total day minutes total day calls total day charge  \\\n",
+       "1964                     0                 5               6                5   \n",
+       "262                      0                 4               6                4   \n",
+       "2285                     0                 4               6                4   \n",
+       "825                      0                 4               6                4   \n",
+       "1926                     0                 4               6                4   \n",
+       "\n",
+       "     total eve minutes total eve calls total eve charge total night minutes  \\\n",
+       "1964                 5               5                5                   4   \n",
+       "262                  5               6                5                   4   \n",
+       "2285                 5               5                5                   5   \n",
+       "825                  5               5                5                   4   \n",
+       "1926                 5               6                5                   4   \n",
+       "\n",
+       "     total night calls total night charge total intl minutes total intl calls  \\\n",
+       "1964                 4                  4                  5                2   \n",
+       "262                  4                  4                  5                1   \n",
+       "2285                 4                  5                  5                1   \n",
+       "825                  5                  4                  5                2   \n",
+       "1926                 4                  4                  4                1   \n",
+       "\n",
+       "     total intl charge  customer service calls  churn  distance  \n",
+       "1964                 5                       1    0.0   53716.0  \n",
+       "262                  5                       1    0.0   53846.0  \n",
+       "2285                 5                       1    0.0   54367.0  \n",
+       "825                  5                       1    0.0   54693.0  \n",
+       "1926                 4                       2    0.0   54771.0  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# Sort the dataset in ascending order of distance\n",
+    "data.sort_values(by=['distance']).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
