--- a/Churn_Prediction.ipynb
+++ b/Churn_Prediction.ipynb
@@ -1667,19 +1667,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Gaussian Naive Bayes Classifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "clf = GaussianNB()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1890,7 @@
        "104                       1  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1962,7 @@
        "104    0.0"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1973,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1990,7 @@
        "GaussianNB(priors=None, var_smoothing=1e-09)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2001,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2027,14 +2027,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.77\n"
+      "Accuracy: 0.77\n",
+      "Precision: 0.25\n",
+      "Recall: 0.17647058823529413\n",
+      "F-measure: 0.20689655172413793\n"
      ]
     }
    ],
@@ -2043,7 +2046,13 @@
     "\n",
     "\n",
     "LDT_accuracy = accuracy_score(LDT_y, prediction)\n",
-    "print(LDT_accuracy)"
+    "LDT_precision = precision_score(LDT_y, prediction)\n",
+    "LDT_recall = recall_score(LDT_y, prediction)\n",
+    "LDT_fmeasure = f1_score(LDT_y, prediction)\n",
+    "print('Accuracy:', LDT_accuracy)\n",
+    "print('Precision:', LDT_precision)\n",
+    "print('Recall:', LDT_recall)\n",
+    "print('F-measure:', LDT_fmeasure)"
    ]
   },
   {
@@ -2074,14 +2083,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.89\n"
+      "Accuracy: 0.89\n",
+      "Precision: 0.65\n",
+      "Recall: 0.7647058823529411\n",
+      "F-measure: 0.7027027027027027\n"
      ]
     }
    ],
@@ -2090,7 +2102,13 @@
     "\n",
     "\n",
     "UDT_accuracy = accuracy_score(UDT_y, prediction)\n",
-    "print(UDT_accuracy)"
+    "UDT_precision = precision_score(UDT_y, prediction)\n",
+    "UDT_recall = recall_score(UDT_y, prediction)\n",
+    "UDT_fmeasure = f1_score(UDT_y, prediction)\n",
+    "print('Accuracy:', UDT_accuracy)\n",
+    "print('Precision:', UDT_precision)\n",
+    "print('Recall:', UDT_recall)\n",
+    "print('F-measure:', UDT_fmeasure)"
    ]
   },
   {
